css: improve scaling on small screens, fix heading size

--- a/static/main.css
+++ b/static/main.css
@@ -1,152 +1,181 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200..800;1,200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200..800;1,200..800&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    --blue: #1c3262;
-    --blue-light: #c6dbe8;
-    --orange: #ff914d;
-    --max-content-width: 1000px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 14px;
+  color: var(--black);
+  --black: #222;
+  --blue: #1c3262;
+  --blue-light: #c6dbe8;
+  --orange: #ff914d;
+  --max-content-width: 1200px;
+  --min-side-padding: 2rem;
+}
+
+@media (min-width: 1400px) {
+  html {
+    font-size: 16px;
+  }
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 body > * {
-    flex: 0 0 auto;
+  flex: 0 0 auto;
 }
 
-main {
-    flex-grow: 1;
-    margin-bottom: 8rem;
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 a {
-    color: var(--blue-light);
+  color: var(--blue-light);
 }
 
 a:hover {
-    filter: brightness(0.8);
+  filter: brightness(0.8);
+}
+
+main {
+  flex-grow: 1;
+  margin-bottom: 8rem;
 }
 
 .container {
-    max-width: var(--max-content-width);
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: min(
+    var(--max-content-width),
+    calc(100% - 2 * var(--min-side-padding))
+  );
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #header {
-    height: 7rem;
-    padding: 0 1rem 0 1rem;
-    background-color: var(--blue);
-    width: 100%;
+  height: 7rem;
+  background-color: var(--blue);
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  #header {
+    height: 5rem;
+  }
 }
 
 #header > div.container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #logo {
-    height: 75%;
+  height: 75%;
 }
 
 #logo:hover {
-    filter: brightness(0.9);
+  filter: brightness(0.9);
 }
 
 #logo > img {
-    height: 100%;
+  height: 100%;
 }
 
 #links > a {
-    color: var(--blue-light);
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-weight: 600;
+  color: var(--blue-light);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 #links > *:not(:last-child) {
-    margin-right: 1em;
+  margin-right: 1em;
 }
 
 #links > a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .big-orange-box {
-    background-color: var(--orange);
-    padding: 3rem 0 3rem 0;
+  background-color: var(--orange);
+  padding: 3rem 0 3rem 0;
 }
 
 .big-orange-box > .container {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .big-blue-box {
-    padding: 1.5rem 0.5rem 1.5rem 0.5rem;
-    text-align: center;
-    color: var(--blue-light);
-    background-color: var(--blue);
-    width: 20rem;
+  padding: 1.5rem 0.5rem 1.5rem 0.5rem;
+  text-align: center;
+  color: var(--blue-light);
+  background-color: var(--blue);
+  width: 20rem;
 }
 
 .big-blue-box > :first-child {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .profiles {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 2rem 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 2rem 0;
 }
 
 .profile {
-    width: 20rem;
-    height: 30rem;
-    background-color: var(--blue-light);
-    border-radius: 10px;
+  width: 20rem;
+  height: 30rem;
+  background-color: var(--blue-light);
+  border-radius: 10px;
 }
 
 .profile > * {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .profile > h3 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .profile > .position {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .profile > img {
-    height: 14rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+  height: 14rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 #footer {
-    padding: 2rem 1rem 0 1rem;
-    width: 100%;
-    background-color: var(--blue);
-    color: var(--blue-light);
+  padding: 2rem 1rem 0 1rem;
+  width: 100%;
+  background-color: var(--blue);
+  color: var(--blue-light);
 }
